Fix article width on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1445,7 +1445,7 @@ p.tag-wrap {
   }
 
   .article__body {
-    grid-column: 2/1;
+    grid-column: 2;
   }
 
   .article-list {
